--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="/NavBar.css" />
-    <link rel="stylesheet" href="/Blogs/blog.css" />
     <link rel="stylesheet" href="/HomePageStyle.css" />
     <script
       src="https://kit.fontawesome.com/5b4edfe5e0.js"
@@ -27,11 +26,11 @@
         <li id="Tli">
           <a href="/index.html" class="active" id="Ta">Home</a>
         </li>
-        <li id="Tli"><a href="/Blogs/Week1blog.html" id="Ta">Blogs</a></li>
-        <li id="Tli"><a href="/Design/index.html" id="Ta">Designs</a></li>
-        <li id="Tli"><a href="/Essay/index.html" id="Ta">Essay</a></li>
+        <li id="Tli"><a href="#" id="Ta">Blogs</a></li>
+        <li id="Tli"><a href="#" id="Ta">Designs</a></li>
+        <li id="Tli"><a href="#" id="Ta">Essay</a></li>
         <li id="Tli">
-          <a href="/Profile & Portfolio/index.html" id="Ta">Portfolio</a>
+          <a href="#" id="Ta">Portfolio</a>
         </li>
       </ul>
     </nav>
